adds heroku link to readme

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1>What's My Change</h1>
+<h1>What's My Change?</h1>
 <form action="/change">
   <div class="form-group">
     <label for="amount">Enter an amount:
